add CRONOS paper

--- a/index.html
+++ b/index.html
@@ -70,13 +70,17 @@
                         <p>
                             During my research adventures, I have gratefully collaborated with or am still collaborating with
                             (in alphabetical order)
+                            T. Baena Moura,
                             <a href="https://www.imes.uni-hannover.de/en/institute/team/m-sc-max-bartholdt">M. N. Bartholdt</a>,
                             <a href="https://crl.utm.utoronto.ca/jbk.html">J. Burgner-Kahrs</a>,
+                            N. Cancelliere,
                             <a href="https://ryan-zeyuan-chen.github.io/">R. Z. Chen</a>,
+                            A. Consolic,
                             <a href="https://puspitadewi.com/">P. T. Dewi</a>,
                             <a href="https://www.mirmi.tum.de/en/rsi/team/haddadin-sami/">S. Haddadin</a>,
                             <a href="https://taqihamoda.github.io/">T. Hamoda</a>,
                             L. Johannsmeier,
+                            V. Mendes Pereira,
                             V. Modes,
                             Ch. Muhmann,
                             P. Le,
@@ -85,8 +89,9 @@
                             <a href="https://team.inria.fr/defrost/team-members/quentin-peyron/">Q. Peyron</a>,
                             <a href="https://priyankarao257.github.io/">P. Rao</a>,
                             A. Senyk,
-                            and,
-                            <a href="https://www.cs.toronto.edu/~cshentu/">C. Shentu</a>.
+                            <a href="https://www.cs.toronto.edu/~cshentu/">C. Shentu</a>,
+                            and
+                            G. Zogaj.
                         </p>
                     </td>
                 </tr>
@@ -97,6 +102,36 @@
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <!-- PAPER -->
                 <tbody>
+
+                <!--BaenaMouraBurgner-Kahrs_et_al_JMRR_2025-->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle">
+                        <img alt="clean-usnob" height="85" src="images/2025_JMRR_Thais_tinywow.png" width="160">
+                    </td>
+                    <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
+                        <a>
+                            <papertitle>
+                                CRONOS: A Continuum Robot for Neurovascular Surgery - Design, Development, and Feasibility Evaluation
+                            </papertitle>
+                        </a>
+                        <br>
+                        <a>Thais Baena Moura</a>,
+                        <a>Arturo Consolic</a>,
+                        <strong>Reinhard M. Grassmann</strong>,
+                        <a>Greta Zogaj</a>,
+                        <a href="https://scholar.google.com/citations?user=aIqRIc8AAAAJ">Nicole Cancelliere</a>,
+                        <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>,
+                        <a href="https://scholar.google.com/citations?user=pIMKbxQAAAAJ">Vitor Mendes Pereira</a>
+                        <br>
+                        JMRR, 2025 <i>(accepted)</i>
+                        <br>
+                        <a>paper</a>
+                        /
+                        <a>BibTex</a>
+                        <p>We present the design, development, and evaluation of a continuum robot for neurovascular surgery.</p>
+                        &#35;Systempaper &#35;ContinuumRobot
+                    </td>
+                </tr>
 
                 <!--MuhmannBurgner-Kahrs_et_al_arXiv_2025-->
                 <tr>
@@ -122,7 +157,7 @@
                         /
                         <a href="data/MuhmannBurgner-Kahrs_et_al_arXiv_2025.bib">BibTex</a>
                         <p>Dynamic model and robot-based evaluation for a tendon-driven continuum robot with five tendons using Clarke transfrom.</p>
-                        &#35;Manifold &#35;Dynamics &#35;ContinuumRobot
+                        &#35;Manifold &#35;Dynamics &#35;ContinuumRobot &#35;Systempaper
                     </td>
                 </tr>
 
@@ -132,7 +167,7 @@
                         <img alt="clean-usnob" height="95" src="images/2025_DACR_tinywow.jpg" width="160">
                     </td>
                     <td style="padding:10px;vertical-align:middle" valign="middle" width="100%">
-                        <a href="">
+                        <a>
                             <papertitle>Displacement-Actuated Continuum Robots: A Joint Space Abstraction
                             </papertitle>
                         </a>
@@ -330,7 +365,7 @@
                         <a href="http://www.opencontinuumrobotics.com">OpenCR Project</a>
                         <p>To democratize continuum robots research, we propose an actuation module to build torque-controlled continuum robots and provide open-source software and hardware with
 our initiative called the Open Continuum Robotics Project.</p>
-                        &#35;Design &#35;TorqueControl &#35;ContinuumRobot
+                        &#35;Design &#35;TorqueControl &#35;ContinuumRobot &#35;Systempaper
                     </td>
                 </tr>
 
