--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <a href="https://scholar.google.com/citations?user=neeX6EoAAAAJ">Max Bartholdt</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>arXiv</em>, 2025
+                        <em>IROS (accepted)</em>, 2025
                         <br>
                         <a href="paper/MuhmannBurgner-Kahrs_et_al_arXiv_2025.pdf">paper</a>
                         /
