--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">paper</a>
                         /
-                        <a href="Xplore">IEEE Xplore</a>
+                        <a href="https://doi.org/10.1109/RoboSoft63089.2025.11020814">IEEE Xplore</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2412.16401">arXiv</a>
                         /
