--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>,
                         <a href="https://scholar.google.com/citations?user=pIMKbxQAAAAJ">Vitor Mendes Pereira</a>
                         <br>
-                        JMRR, 2025 <i>(accepted)</i>
+                        JMRR, 2025
                         <br>
-                        <a>paper</a>
+                        <a href="https://doi.org/10.1142/S2424905X25500102">world scientific</a>
                         /
                         <a>BibTex</a>
                         <p>We present the design, development, and evaluation of a continuum robot for neurovascular surgery.</p>
@@ -149,9 +149,9 @@
                         <a href="https://scholar.google.com/citations?user=neeX6EoAAAAJ">Max Bartholdt</a>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>arXiv</em>, 2025
+                        <em>IROS</em>, 2025 <i>(accepted)</i>
                         <br>
-                        <a href="paper/MuhmannBurgner-Kahrs_et_al_arXiv_2025.pdf">paper</a>
+                        <a href="paper/MuhmannBurgner-Kahrs_et_al_arXiv_2025.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2503.20693">arXiv</a>
                         /
@@ -177,7 +177,7 @@
                         <br>
                         arXiv, 2025
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025a.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025a.pdf">preprint</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2503.16778">arXiv</a>
                         /
@@ -203,7 +203,7 @@
                         <br>
                         <em>arXiv</em>, 2025
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025.pdf">preprint</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2503.12265">arXiv</a>
                         /
@@ -229,7 +229,7 @@
                         <br>
                         <em>arXiv</em>, 2024
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024b.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_arXiv_2024b.pdf">preprint</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2412.16422">arXiv</a>
                         /
@@ -255,7 +255,7 @@
                         <br>
                         <em>IEEE RoboSoft</em>, 2025 (<a href="https://robosoft2025.org/spotlight/">spotlight</a>)
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">reprint</a>
                         /
                         <a href="Xplore">IEEE Xplore</a>
                         /
@@ -288,7 +288,7 @@
                         <br>
                         <em>arXiv</em>, 2024
                         <br>
-                        <a href="paper/GrassmannSenykBurgner-Kahrs_arXiv_2024.pdf">paper</a>
+                        <a href="paper/GrassmannSenykBurgner-Kahrs_arXiv_2024.pdf">preprint</a>
                         /
                         <a href="https://arxiv.org/abs/2409.16501">arXiv</a>
                         /
@@ -319,7 +319,7 @@
                         <br>
                         <em>IEEE ICRA</em>, 2024
                         <br>
-                        <a href="paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">paper</a>
+                        <a href="paper/GrassmannSenykBurgner-Kahrs_ICRA_2024.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/ICRA57147.2024.10610322">IEEE Xplore</a>
                         /
@@ -352,7 +352,7 @@
                         <br>
                         <em>Frontiers in Robotics and AI</em>, 2024
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2024.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_et_al_arXiv_2024.pdf">reprint</a>
                         /
                         <a href="https://arxiv.org/abs/2304.11850">arXiv</a>
                         /
@@ -388,7 +388,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IEEE/RAS IROS</em>, 2022
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_et_al_IROS_2022.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_et_al_IROS_2022.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/IROS47612.2022.9981719">IEEE Xplore</a>
                         /
@@ -451,7 +451,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IEEE ICRA</em>, 2021
                         <br>
-                        <a href="paper/LiangBurgner-Kahrs_et_al_ICRA_2021.pdf">paper</a>
+                        <a href="paper/LiangBurgner-Kahrs_et_al_ICRA_2021.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/ICRA48506.2021.9562085">IEEE Xplore</a>
                         /
@@ -479,7 +479,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IFRR RSS Workshop on Retrospectives in Robotics</em>, 2020
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_et_al_RSS_WS_2020.pdf">reprint</a>
                         /
                         <a href="https://openreview.net/forum?id=bYLFxFQPFtX">OpenReview</a>
                         /
@@ -512,7 +512,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IEEE RA-L</em>, 2019
                         <br>
-                        <a href="paper/GrassmannBurgner-Kahrs_RA-L_2019.pdf">paper</a>
+                        <a href="paper/GrassmannBurgner-Kahrs_RA-L_2019.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/LRA.2019.2931133">IEEE Xplore</a>
                         /
@@ -541,7 +541,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IFRR RSS</em>, 2019
                         <br>
-                        <a href="http://roboticsproceedings.org/rss15/p17.pdf">paper</a>
+                        <a href="http://roboticsproceedings.org/rss15/p17.pdf">reprint</a>
                         /
                         <a href="http://roboticsproceedings.org/rss15/p17.html">RSS XV</a>
                         /
@@ -572,7 +572,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
                         <br>
-                        <br><a href="paper/GrassmannJohannsmeierHaddadin_IROS_2018.pdf">paper</a>
+                        <br><a href="paper/GrassmannJohannsmeierHaddadin_IROS_2018.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/IROS.2018.8594339">IEEE Xplore</a>
                         /
@@ -601,7 +601,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
                         <em>IEEE/RSJ IROS</em>, 2018
-                        <br><a href="paper/GrassmannModesBurgner-Kahrs_IROS_2018.pdf">paper</a>
+                        <br><a href="paper/GrassmannModesBurgner-Kahrs_IROS_2018.pdf">reprint</a>
                         /
                         <a href="https://doi.org/10.1109/IROS.2018.8594451">IEEE Xplore</a>
                         /
