arXiv 2025 article evolved to RA-L 2025 letter

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </td>
                 </tr>
 
-                <!--GrassmannBurgner-Kahrs_arXiv_2025-->
+                <!--GrassmannBurgner-Kahrs_RAL_2025-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="90" src="images/2025_improvedStateRepresentation.png" width="160">
@@ -201,9 +201,11 @@
                         <strong>Reinhard M. Grassmann</strong>,
                         <a href="https://scholar.google.com/citations?user=JtHZL24AAAAJ">Jessica Burgner-Kahrs</a>
                         <br>
-                        <em>arXiv</em>, 2025
+                        <em>IEEE RA-L</em>, 2025
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_arXiv_2025.pdf">preprint</a>
+                        /
+                        <a href="https://doi.org/10.1109/LRA.2025.3600145">IEEE Xplore</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2503.12265">arXiv</a>
                         /
