--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     </td>
                 </tr>
 
-                <!--GrassmannBurgner-Kahrs_RAL_2025-->
+                <!--GrassmannBurgner-Kahrs_arXiv_2025, GrassmannBurgner-Kahrs_RAL_2025-->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
                         <img alt="clean-usnob" height="90" src="images/2025_improvedStateRepresentation.png" width="160">
@@ -259,7 +259,7 @@
                         <br>
                         <a href="paper/GrassmannBurgner-Kahrs_RoboSoft_2025.pdf">reprint</a>
                         /
-                        <a href="Xplore">IEEE Xplore</a>
+                        <a href="https://doi.org/10.1109/RoboSoft63089.2025.11020814">IEEE Xplore</a>
                         /
                         <a href="https://doi.org/10.48550/arXiv.2412.16401">arXiv</a>
                         /
