--- a/index.html
+++ b/index.html
@@ -865,9 +865,11 @@ our initiative called the Open Continuum Robotics Project.</p>
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
-                            - <i>Displacement-Actuated Continuum Robots: A Joint Space Abstraction </i>
+                            - <a href="https://doi.org/10.48550/arXiv.2503.16778">
+                                <i>Displacement-Actuated Continuum Robots: A Joint Space Abstraction </i>
+                            </a>
                             <br>
-                            - <a href="https://doi.org/10.48550/arXiv.2503.12265">
+                            - <a href="https://doi.org/10.1109/LRA.2025.3600145">
                                 <i>Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots </i>
                             </a>
                             <br>
@@ -875,7 +877,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                                 <i>Using Clarke Transform to Create a Framework on the Manifold: From Sampling via Trajectory Generation to Control</i>
                             </a>
                             <br>
-                            - <a href="https://doi.org/10.48550/arXiv.2412.16401">
+                            - <a href="https://doi.org/10.1109/RoboSoft63089.2025.11020814">
                                 <i>Clarke Transform and Encoder-Decoder Architecture for Arbitrary Joints Locations in Displacement-Actuated Continuum Robots</i>
                             </a>
                             <br>
