--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     </td>
                     <td valign="middle" width="100%">
                         <p><i>"Continuum Robot Design and Prototyping "</i> (<a href="https://crl.utm.utoronto.ca/_pages/design.html">link to project description</a>)</p>
-                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                        <p>Principal investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
@@ -776,7 +776,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     </td>
                     <td style="background-color:#f4f5f4" valign="middle" width="100%">
                         <p><i>"Open Continuum Robotics Project"</i> (<a href="https://www.opencontinuumrobotics.com/">link to OpenCR Project</a>, <a href="https://crl.utm.utoronto.ca/_pages/opencr.html">link to project description</a>)</p>
-                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                        <p>Principal investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
@@ -812,7 +812,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     </td>
                     <td valign="middle" width="100%">
                         <p><i>"Learning the Kinematics of Tubular Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/learning.html">link to project description</a>)</p>
-                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                        <p>Principal investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
@@ -861,7 +861,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                     </td>
                     <td style="background-color:#f4f5f4" valign="middle" width="100%">
                         <p><i>"Algorithms for Continuum Robots"</i> (<a href="https://crl.utm.utoronto.ca/_pages/algorithms.html">link to project description</a>)</p>
-                        <p>Principle investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                        <p>Principal investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
                             Dr.-Ing. Jessica Burgner-Kahrs</a></p>
                         <p>Relevant papers:
                             <br>
