add Flatland Robotics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                             <name>Reinhard M. Grassmann</name>
                         </p>
                         <p>
-                            I am currently looking for a postdoc position.
                             I obtained my Ph.D. in the Department of Computer Science working at
                             the <a href="https://crl.utm.utoronto.ca/">Continuum Robotics Laboratory</a> at the
                             University of Toronto, Canada.
@@ -44,6 +43,11 @@
                             &nbsp/&nbsp
                             <a href="https://github.com/reinhardgrassmann/">GitHub</a> &nbsp/&nbsp
                             <a href="https://www.semanticscholar.org/author/R.-Grassmann/65752777">Semantic Scholar</a>
+                        </p>
+                            I stated a blog called <a href="https://reinhardgrassmann.github.io/FlatlandRobotics/about/">Flatland Robotics</a>.
+                            Most of my posts are tutorials and philosophical explorations.
+                        <p>
+
                         </p>
                     </td>
                     <td style="padding:2.5%;width:40%;max-width:40%">
