add teaching experiences

--- a/index.html
+++ b/index.html
@@ -944,6 +944,89 @@ our initiative called the Open Continuum Robotics Project.</p>
                 </tbody>
             </table>
 
+
+            <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+                <!-- TEACHING -->
+                <tbody>
+
+                <tr>
+                    <td style="padding:20px;width:100%;vertical-align:middle">
+                        <heading>Teaching</heading>
+                        <p>
+                            Besides mentoring and supervising students, I was a (head) TA for different courses.
+                            The links lead to course descriptions.
+                        </p>
+                        - <a >
+                            <i>
+                                <a href="https://utm.calendar.utoronto.ca/course/csc376h5">
+                                    "CSC 376 Fundamentals of Robots"
+                                </a>
+                            </i>
+                            ; 4 years incl. 1 year as <strong>head TA</strong>
+                        </a>
+                        <br>
+                        -
+                            <i>
+                                "Programmierung mechatronische Systeme"
+                            </i>
+                            ; eng.: Programming Mechatronic Systems; 1 year
+                        <br>
+                        -
+                            <i>
+                                "Machine Learning and Modern Control in Robotics"
+                            </i>
+                            ; 1 year
+                        <br>
+                        - <a >
+                            <i>
+                                <a href="https://www.ikm.uni-hannover.de/en/studies/course-descriptions">
+                                    "Technische Mechanik II für Maschinenbau"
+                                </a>
+                            </i>
+                            ; eng.: Engineering Mechanics II; 1 year
+                        </a>
+                        <br>
+                        - <a >
+                            <i>
+                                <a href="https://www.ikm.uni-hannover.de/en/studies/course-descriptions">
+                                    "Technische Mechanik I für Maschinenbau"
+                                </a>
+                            </i>
+                            ; eng.: Engineering Mechanics I; 1 year
+                        </a>
+                        <br>
+                        - <a >
+                            <i>
+                                <a href="https://www.ikm.uni-hannover.de/en/studies/course-descriptions">
+                                    "Technische Schwingungslehre / Technische Mechanik IV für Maschinenbau"
+                                </a>
+                            </i>
+                            ; eng.: Mechanics of Vibration / Engineering Mechanics IV; 1 year
+                        </a>
+                        <br>
+                        - <a >
+                            <i>
+                                <a href="https://www.ikm.uni-hannover.de/en/studies/course-descriptions">
+                                    "Technische Mechanik III für Maschinenbau"
+                                </a>
+                            </i>
+                            ; eng.: Engineering Mechanics III; 1 year
+                        </a>
+                        <br>
+                        - <a >
+                            <i>
+                                <a href="https://www.fei.uni-hannover.de/de/studium/vor-dem-studium/start-ins-studium/vorkurse">
+                                    "Mathematik-Vorkurs für Studienanfängerinnen und -anfängerder Elektrotechnik, Energietechnik, Mechatronik"
+                                </a>
+                            </i>
+                            ;eng.: Mathematics Pre-course; 3 years incl. 3 years as <strong>head TA</strong>; creating a <strong>171-page manuscript</strong> with problem sets
+                        </a>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
             <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
                 <!-- ACKNOWLEDGMENT -->
                 <tbody>
