update and add project: Embracing the Environment - Autonomous Navigation of Continuum Robots in Confined Spaces

--- a/index.html
+++ b/index.html
@@ -729,6 +729,29 @@ our initiative called the Open Continuum Robotics Project.</p>
                 <!-- PROJECTS -->
                 <tbody>
 
+                <!-- Embracing the Environment - Autonomous Navigation of Continuum Robots in Confined Spaces -->
+                <tr>
+                    <td style="padding:10px;width:25%;vertical-align:middle;background-color:#f4f5f4">
+                        <img alt="clean-usnob" height="74" src="https://crl.utm.utoronto.ca/assets/images/Pub_2024_CAN.png" width="160">
+                    </td>
+                    <td style="background-color:#f4f5f4" valign="middle" width="100%">
+                        <p><i>"Embracing the Environment - Autonomous Navigation of Continuum Robots in Confined Spaces"</i> (<a href="404">link to project description</a>)</p>
+                        <p>Principal investigator is <a href="https://de.wikipedia.org/wiki/Jessica_Burgner-Kahrs">Prof.
+                            Dr.-Ing. Jessica Burgner-Kahrs</a></p>
+                        <p>Relevant papers:
+                            <br>
+                            - <a href="https://doi.org/10.1109/LRA.2025.3600145">
+                                <i>Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots </i>
+                            </a>
+                        </p>
+                        <p>Funding:
+                            <br>
+                            - <i>NSERC Discovery Grant (RGPIN-2025-04343)
+                            </i>
+                        </p>
+                    </td>
+                </tr>
+
                 <!-- Continuum Robot Design and Prototyping  -->
                 <tr>
                     <td style="padding:10px;width:25%;vertical-align:middle">
@@ -846,7 +869,7 @@ our initiative called the Open Continuum Robotics Project.</p>
                         </p>
                         <p>Funding:
                             <br>
-                            - <i>NSERC Discovery Grant (April 1, 2019 – March 31, 2025)
+                            - <i>NSERC Discovery Grant (RGPIN-2019-04846)
                             </i>
                             <br>
                             - <i>NSERC Discovery Accelerator Supplements
@@ -871,10 +894,6 @@ our initiative called the Open Continuum Robotics Project.</p>
                             <br>
                             - <a href="https://doi.org/10.48550/arXiv.2503.16778">
                                 <i>Displacement-Actuated Continuum Robots: A Joint Space Abstraction </i>
-                            </a>
-                            <br>
-                            - <a href="https://doi.org/10.1109/LRA.2025.3600145">
-                                <i>Clarke Coordinates Are Generalized Improved State Parametrization for Continuum Robots </i>
                             </a>
                             <br>
                             - <a href="https://doi.org/10.48550/arXiv.2412.16422">
